force-app/main/default/objects/Target_Logic__c/Target_Logic__c.object-meta.xml
<CustomObject>
    <label>NotUsed_Target Logic</label>
    <nameField>
        <label>Target Logic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NotUsed_Target Logics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>