force-app/main/default/objects/Target_Logic__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grand_Total__c</fullName>
                <label>Grand Total</label>
            </value>
            <value>
                <fullName>Total_Quantity__c</fullName>
                <label>Total Quantity</label>
            </value>
            <value>
                <fullName>Total_Amount__c</fullName>
                <label>Total Amount</label>
            </value>
            <value>
                <fullName>Quantity__c</fullName>
                <label>Quantity</label>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
            <value>
                <fullName>Account1__c</fullName>
                <label>Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>