force-app/main/default/objects/Target_Logic__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Target_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>COUNT_DISTINCT</fullName>
                <label>Unique Count</label>
            </value>
            <value>
                <fullName>AVG</fullName>
                <isActive>false</isActive>
                <label>AVG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>