force-app/main/default/objects/Target_Logic__c/fields/max_incentive__c.field-meta.xml
<CustomField>
    <fullName>max_incentive__c</fullName>
    <label>Max Incentive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>