force-app/main/default/objects/Target_Logic__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Formula__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice__c</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Invoice_item__c</fullName>
                <label>Invoice Item</label>
            </value>
            <value>
                <fullName>Visit__c</fullName>
                <label>Visit</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>