force-app/main/default/objects/Target_Logic__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Target_Logics</relationshipName>
    <type>Lookup</type>
</CustomField>