force-app/main/default/objects/Target_Logic__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipName>Target_Logics</relationshipName>
    <type>Lookup</type>
</CustomField>