force-app/main/default/objects/Target_Logic__c/fields/Target_Plan__c.field-meta.xml
<CustomField>
    <fullName>Target_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Plan</label>
    <referenceTo>Target_Plan__c</referenceTo>
    <relationshipName>Target_Logics</relationshipName>
    <type>Lookup</type>
</CustomField>