force-app/main/default/objects/Target_Logic__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Target_Type</valueSetName>
    </valueSet>
</CustomField>